Minor fixes. Refers to #126, #127, #129

--- a/client/components/widgets/circleColorIcon.html
+++ b/client/components/widgets/circleColorIcon.html
@@ -3,7 +3,7 @@
   {{#if eq shortSymbol 'RUNE'}}
   <img src="/img/RUNE-ICON.svg" width="{{imgSize size}}">
   {{else}}
-  <div class="circle-icon-{{size}} d-flex align-items-center text-white" style="{{circleStyle shortSymbol}}"><div class="text-center w-100">{{shortSymbol}}</div></div>
+  <div class="circle-icon-{{size}} rounded-circle d-flex align-items-center text-white" style="{{circleStyle shortSymbol}}"><div class="text-center w-100">{{shortSymbol}}</div></div>
   {{/if}}
 
 </template>
