--- a/imports/ui/lib/styles/main.scss
+++ b/imports/ui/lib/styles/main.scss
@@ -192,7 +192,7 @@ ul.list-links > li:hover {
 // Custom Styles
 
 // Custom background
-#app-wrapper > .bg-img-brand {
+#app-wrapper.bg-img-brand {
   background-image: url("/img/Asgard-Swirl.png");
   background-attachment: fixed;
 	background-size: auto;
