Minor changes, and Coses #123 , Related to #29

--- a/client/components/wallet/walletReceive.html
+++ b/client/components/wallet/walletReceive.html
@@ -1,6 +1,6 @@
 <template name="walletReceive">
-<h5 class="text-center mb-4">Receive Funds</h5>
 <div class="row">
+  <h5 class="col-12 text-center mb-4">Receive Funds</h5>
 
   <div class="col-md-8 mx-auto">
 
