Migrate start screen and breadcrum. Related to #70, #138, #140

--- a/imports/ui/lib/styles/_antd_custom.less
+++ b/imports/ui/lib/styles/_antd_custom.less
@@ -1,5 +1,6 @@
 @import '{}/node_modules/antd/dist/antd.dark.less';
 // Customization of antd only
+// https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
 
 // Original defaults
 /*
@@ -78,6 +79,10 @@
 // @link-active-color: color(~`colorPalette('@{link-color}', 7) `);
 // @link-decoration: none;
 // @link-hover-decoration: none;
+
+// @line-height-base: 1.5715;
+@border-radius-base: 4px;
+@border-radius-sm: @border-radius-base - 1;
 
 // (temporary?)TODO: re-check when removing bootstrap
 // Grid
