--- a/imports/ui/components/elements/breadcrumbStyles.less
+++ b/imports/ui/components/elements/breadcrumbStyles.less
@@ -6,6 +6,6 @@
   background: none;
   // override default color
   > span:last-child a {
-    // color: @Accent-Green;
+    color: @Accent-Green;
   }
 }
