AntD migration & minor fixes/improvements. Related to #141

--- a/imports/ui/lib/styles/_antd_custom.less
+++ b/imports/ui/lib/styles/_antd_custom.less
@@ -2,6 +2,7 @@
 // Customization of antd only
 // https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
 
+@path-fonts:    '{}/public/fonts';
 // Original defaults
 /*
 @primary-color: @blue-6;
