Complete view migration for wallet imports. Related to #132, #141, #144

--- a/imports/ui/lib/styles/_antd_custom.less
+++ b/imports/ui/lib/styles/_antd_custom.less
@@ -1,4 +1,5 @@
 @import '{}/node_modules/antd/dist/antd.dark.less';
+@import './_OpenSans.less';
 // Customization of antd only
 // https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
 
@@ -85,6 +86,9 @@
 @border-radius-base: 4px;
 @border-radius-sm: @border-radius-base - 1;
 
+@font-family: OpenSans -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
+  'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+  'Noto Color Emoji';
 // (temporary?)TODO: re-check when removing bootstrap
 // Grid
 .ant-row { display: block; }
