--- a/imports/ui/lib/styles/styles.less
+++ b/imports/ui/lib/styles/styles.less
@@ -9,13 +9,10 @@
 
 // First heading in row
 .ant-row > .ant-col {
-  > h1, h2, h3, h4, h5, h6 {
-    text-align: center;
-    color: @link-color;
+  > h1:first-child, > h2:first-child, > h3:first-child, > h4:first-child, > h5:first-child {
+      text-align: center;
   }
 }
-
-
 
 // Temp simple style hack. Overly generalized? Mostly for mobile.
 .ant-btn {
@@ -29,16 +26,31 @@
   }
 }
 
+.ant-btn {
+  margin-top: .8em;
+  margin-bottom: 1.2em;
+}
 form .ant-btn, form .ant-upload {
   width: 100%;
+  margin-top: unset;
+  margin-bottom: unset;
+}
+.ant-tabs-nav {
+  > .ant-tabs-ink-bar {
+    background-color: @link-color;
+  }
+  .ant-tabs-tab-active, .ant-tabs-tab {
+    font-weight: 500;
+  }
 }
 
-// Specific styles
+// Specific styles *****************
+
+// Branded Button
 button.ant-btn.ant-btn-brand {
   position: relative;
   padding: @btn-border-width; // this creates the pseudo border
-  // TODO: Replace this with new darker btn type
-  background-color: darken(@Darker-Gray, 4%); // this is overriden, but for iherit in pseudo below
+  background-color: darken(@Darker-Gray, 4%); // this is overriden, but needed for iherit in pseudo below
   background-image: linear-gradient(to right, @Asgard-Green, @Accent-Blue);
   border: none;
   &:hover {
