Codebase cleanup, UI bug fixes. Related to #151

--- a/imports/ui/lib/styles/styles.less
+++ b/imports/ui/lib/styles/styles.less
@@ -3,10 +3,6 @@
 @import './_Montserrat.less';
 @import './_Exo2.less';
 
-// these are custom styles
-
-// Layouts
-
 // First heading in row
 .ant-row > .ant-col {
   > h1:first-child, > h2:first-child, > h3:first-child, > h4:first-child, > h5:first-child {
@@ -44,7 +40,7 @@ form .ant-btn, form .ant-upload {
   }
 }
 
-// Specific styles *****************
+// Component Specific styles *****************
 
 // Branded Button
 button.ant-btn.ant-btn-brand {
