--- a/client/components/wallet/walletNew/walletCreate.html
+++ b/client/components/wallet/walletNew/walletCreate.html
@@ -30,7 +30,7 @@
               </div>
             </div>
           </div>
-          <p class="text-warning my-4 font-weight-bold">This is the phrase used to seed your wallet accounts. Record and keep this in a safe place. If you loose access to your wallet and backups, your account can <strong class="text-underline">only</strong> be recovered using this phrase.</p>
+          <p class="text-warning my-4 font-weight-bold">This is the phrase used to seed your wallet accounts. Record and keep this in a safe place. If you lose access to your wallet and backups, your account can <strong class="text-underline">only</strong> be recovered using this phrase.</p>
           <a type="button" class="form-control btn btn-dark btn-brand-border" href="{{pathFor 'walletMnemonicConfirm'}}">
             <span>Next</span>
           </a>
