--- a/imports/ui/lib/styles/styles.less
+++ b/imports/ui/lib/styles/styles.less
@@ -26,6 +26,12 @@
   margin-top: .8em;
   margin-bottom: 1.2em;
 }
+.input-group {
+  > .ant-btn {
+    margin-bottom: @grid-gutter-width / 2;
+    margin-top: 0;
+  }
+}
 form .ant-btn, form .ant-upload {
   width: 100%;
   margin-top: unset;
@@ -37,6 +43,7 @@ form .ant-btn, form .ant-upload {
   }
   .ant-tabs-tab-active, .ant-tabs-tab {
     font-weight: 500;
+    text-transform: uppercase;
   }
 }
 
