Minor changes/fixes

--- a/imports/ui/lib/styles/styles.less
+++ b/imports/ui/lib/styles/styles.less
@@ -47,6 +47,11 @@ form .ant-btn, form .ant-upload {
   }
 }
 
+span.ant-typography-ellipsis {
+  // TODO: Confirm this is not a correction for Bootstrap
+  display: block !important;
+}
+
 // Component Specific styles *****************
 
 // Branded Button
@@ -85,3 +90,9 @@ button.ant-btn.ant-btn-brand {
     }
   }
 }
+
+/* *********** Utilitites ************* */
+
+// Text
+.text-capitalize { text-transform: capitalize !important; }
+.text-uppercase { text-transform: uppercase !important; }
