--- a/imports/ui/lib/styles/_antd_custom.less
+++ b/imports/ui/lib/styles/_antd_custom.less
@@ -82,7 +82,7 @@
 .ant-row {
   margin-left: @grid-gutter-width / -2;
   margin-right: @grid-gutter-width / -2;
-  margin-bottom: @grid-gutter-width;
+  margin-bottom: @grid-gutter-width / 2;
   .ant-col {
     padding-left: @grid-gutter-width / 2;
     padding-right: @grid-gutter-width / 2;
