--- a/imports/ui/components/elements/Block/styles.less
+++ b/imports/ui/components/elements/Block/styles.less
@@ -5,6 +5,7 @@
 }
 .layout() {
   .common();
+  .flex();
   display: flex;
 }
 .inline() {
@@ -13,6 +14,7 @@
 }
 
 .flex() {
+  display: flex;
   flex-grow: 1;
   flex-shrink: 1;
   flex-basis: 0%;
@@ -59,6 +61,7 @@
   // Alignment
   &.ant-block-align-start { align-items: flex-start; }
   &.ant-block-align-center { align-items: center; }
+  &.ant-block-align-baseline { align-items: baseline; }
   &.ant-block-align-end { align-items: flex-end; }
   &.ant-block-align-stretch { align-items: stretch; }
   // Self alignment
