Addressing minor UI/UX fixes etc. Related to #163 #168 #169

--- a/imports/ui/lib/styles/_antd_custom.less
+++ b/imports/ui/lib/styles/_antd_custom.less
@@ -89,6 +89,8 @@
   }
 }
 
+@skeleton-color: darken(@Dark-Gray, 8%);
+@skeleton-to-color: fade(@Black-Gray, 16%);
 form .ant-row { display: block; }
 
 // Icon
