first antD elements, custom styles added for global font coloring/utils

--- a/imports/ui/lib/styles/styles.less
+++ b/imports/ui/lib/styles/styles.less
@@ -105,3 +105,27 @@ button.ant-btn.ant-btn-brand {
 // Text
 .text-capitalize { text-transform: capitalize !important; }
 .text-uppercase { text-transform: uppercase !important; }
+.text-color-primary { color: @primary-color !important; }
+.text-color-secondary { color: @text-color-secondary !important; }
+.text-color-info { color: @info-color !important; }
+.text-color-success { color: @success-color !important; }
+.text-color-processing { color: @processing-color !important; }
+.text-color-error { color: @error-color !important; }
+.text-color-highlight { color: @highlight-color !important; }
+.text-color-warning { color: @warning-color !important; }
+.text-color-normal { color: @normal-color !important; }
+.text-color-white { color: @white !important; }
+.text-color-black { color: @black !important; }
+
+// Text Colors
+
+// @primary-color: @Primary-Gray;
+// @info-color: @Accent-Blue;
+// @success-color: @Asgard-Green;
+// @processing-color: @Accent-Green;
+// @error-color: @Warning-Red;
+// @highlight-color: @Accent-Green;
+// @warning-color: @Caution-Yellow;
+// @normal-color: #d9d9d9;
+// @white: @White-Gray;
+// @black: @Black-Gray;
