fix level for navbar

--- a/imports/ui/components/elements/header/navMenuMain.less
+++ b/imports/ui/components/elements/header/navMenuMain.less
@@ -102,6 +102,7 @@
   }
 }
 
+.ant-menu-vertical { border: none; }
 .my-drawer {
   position: absolute;
   top: 54px;
@@ -116,4 +117,8 @@
 .my-drawer .am-drawer-sidebar .am-list {
   width: 300px;
   padding: 0;
+}
+
+.am-navbar.am-navbar-mobile {
+  z-index: 1010;
 }
