Dirty commit for functioning mainnet. Related to #179, #180, #181, #183

--- a/imports/ui/lib/styles/_antd_custom.less
+++ b/imports/ui/lib/styles/_antd_custom.less
@@ -31,7 +31,7 @@
 // -------- Colors -----------
 @primary-color: @Primary-Gray;
 @info-color: @Accent-Blue;
-@success-color: @Asgard-Green;
+@success-color: @Accent-Green;
 @processing-color: @Accent-Green;
 @error-color: @Warning-Red;
 @highlight-color: @Accent-Green;
@@ -46,7 +46,7 @@
 
 @text-color: @White-Gray;
 @text-color-secondary: @Lighter-Gray;
-@text-color-inverse: @Black-Gray;
+@text-color-inverse: @Darker-Gray;
 // @icon-color-hover: fade(@white, 75%);
 @heading-color: @text-color;
 
