Network type indicator. Related to #202

--- a/imports/ui/components/elements/header/navMenuStyles.less
+++ b/imports/ui/components/elements/header/navMenuStyles.less
@@ -112,7 +112,7 @@
   height: 54px;
   z-index: 1000;
   .am-navbar-right {
-    >.ant-btn {
+    .ant-btn {
       width: unset;
       margin: 0;
       >.anticon {
